# fantasy-data

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
examples/: my_roster.csv  opponent.csv  props.csv
ffdata/: advice.py  backtest_draft.py  betting.py  cli.py  correlation.py  db.py  draft.py  dynasty.py  edge.py  ensemble.py  features.py  gamelines.py  gbm.py  ingest.py  kdst.py  matchup.py  neural.py  optimize.py  projections.py  props.py  scoring.py  season_sim.py  sleeper.py  sources.py  store.py  web.py
ffdata/static/: index.html
scripts/: setup.sh
tests/: conftest.py  test_advice.py  test_backtest_draft.py  test_betting.py  test_cli.py  test_correlation.py  test_draft.py  test_draft_scoring.py  test_dynasty.py  test_edge.py  test_features.py  test_gamelines.py  test_ingest.py  test_integration.py  test_kdst.py  test_matchup.py  test_models.py  test_optimize.py  test_pipeline_leakage.py  test_props.py  test_rookie.py  test_scoring.py  test_season_sim.py  test_sleeper.py  test_store.py  test_web.py
