[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ff-data"
version = "0.1.0"
description = "Fantasy football data platform: nflverse stats -> scoring -> projections -> decision tools."
readme = "README.md"
requires-python = ">=3.11"

# Core pipeline: data lake, scoring, projections, matchup sim, betting math.
# Upper bounds are next-major ceilings so a surprise major release can't silently
# change backtest numbers -- reproducibility is load-bearing for this project.
dependencies = [
    "pandas>=2.0,<3.0",
    "pyarrow>=14,<22",
    "duckdb>=1.0,<2.0",
    "lightgbm>=4.0,<5.0",
    "scikit-learn>=1.3,<2.0",
    "scipy>=1.10,<2.0",
]

[project.optional-dependencies]
# The GRU projector (ffdata/neural.py). `pip install ff-data[neural]`.
neural = ["torch>=2.0,<3.0"]
# The FastAPI web UI (ffdata/web.py). `pip install ff-data[web]`.
web = ["fastapi>=0.110,<1.0", "uvicorn[standard]>=0.27,<1.0"]
# Grounded natural-language advice (ffdata/advice.py). Needs ANTHROPIC_API_KEY.
# `pip install ff-data[advice]`.
advice = ["anthropic>=0.40,<1.0"]
# Test + lint tooling. `pip install ff-data[dev]`.
dev = ["pytest>=8.0,<9.0", "ruff>=0.5", "pytest-cov>=5.0"]

[tool.setuptools]
packages = ["ffdata"]

[tool.setuptools.package-data]
ffdata = ["static/*.html"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
# E731 (assigning short lambdas) and E402 (import-not-at-top) are deliberate in
# this codebase: compact scoring/optimizer lambdas, and neural.py's documented
# lazy `import torch` that MUST run after LightGBM initializes OpenMP.
ignore = ["E731", "E402"]

[tool.coverage.run]
source = ["ffdata"]
# neural.py needs torch (optional, not installed in CI) so it can't run there.
omit = ["ffdata/neural.py"]

[tool.coverage.report]
# CLI entrypoints and __main__ blocks are exercised by hand, not the unit suite.
exclude_also = [
    "if __name__ == .__main__.:",
    "def main\\(",
]
# A floor below current (~66%) so coverage can't silently rot. Much of the gap is
# integration paths that need the (uncommitted) data lake -- unreachable in CI.
fail_under = 60
